[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Aptili"
version = "0.0.1"
authors = [
  { name="Yusuf Düzgün", email="yzduzgun@gmail.com" },
]
description = "Django rest project for Aptly Repo Managment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django",
    "requests",
    "beautifulsoup4"
]

[project.urls]
"Homepage" = "https://github.com/Pardus-LiderAhenk/lider-repoman-api"
"Bug Tracker" = "https://github.com/Pardus-LiderAhenk/lider-repoman-api/issues"